<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/zoomIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/description_zoom_in_button"
        android:src="@drawable/ic_zoom_in"
        app:layout_constraintBottom_toTopOf="@id/zoomOut"
        app:layout_constraintEnd_toEndOf="@id/mapView"
        app:layout_constraintTop_toTopOf="@id/mapView"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/zoomOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/description_zoom_out_button"
        android:src="@drawable/ic_zoom_out"
        app:layout_constraintBottom_toBottomOf="@id/location"
        app:layout_constraintEnd_toEndOf="@id/mapView"
        app:layout_constraintTop_toBottomOf="@id/zoomIn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@id/mapView"
        app:layout_constraintEnd_toEndOf="@id/mapView"
        app:layout_constraintTop_toBottomOf="@id/zoomOut"
        android:contentDescription="@string/description_location_button" />


</androidx.constraintlayout.widget.ConstraintLayout>